--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@
                   android:text="此软件为免费开源软件仅供学习交流"
                   android:textSize="12dp"/>
 
+        <Button android:id="@+id/saveCert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="保存证书"/>
+
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="①安装证书②启动③设置WIFI代理"/>
-
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="启动后访问Host:Port下载证书"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -51,12 +51,22 @@
                     android:text="捐赠" tools:ignore="ButtonStyle">
             </Button>
         </LinearLayout>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+            <CheckBox
+                    android:id="@+id/outError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="输出错误日志"/>
+            <CheckBox
+                    android:id="@+id/outRequestURI"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="输出每个请求地址"/>
+        </LinearLayout>
 
-        <CheckBox
-                android:id="@+id/outError"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="输出错误日志"/>
+
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
