--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -27,6 +27,19 @@
                       android:orientation="horizontal">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
+                      android:text="登录后提示的用户名:"
+                      android:textSize="24dp"/>
+            <EditText android:id="@+id/uname"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:text="不限制登录成功"/>
+        </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
                       android:text="Host:"
                       android:textSize="24dp"/>
             <EditText android:id="@+id/host"
