--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,29 +13,23 @@
         <TextView android:id="@+id/version"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:text="版本:"
+                  android:text="@string/version"
                   android:textSize="24dp"
                   android:textStyle="bold"/>
 
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="此软件为免费开源软件仅供学习交流"
-                  android:textSize="12dp"/>
+                  android:text="@string/disclaimer"
+                  android:textSize="24dp"/>
 
         <Button android:id="@+id/saveCert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="保存证书"/>
-
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="①安装证书②启动③设置WIFI代理"
-                  android:textSize="24dp"/>
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="不限制登录需要先正常登录一次,也就是说要等到周末20:00-21:00登录,登录后请不要再登录其他账号,也不要不开软件登录不然要从新开始"
-                  android:textSize="14dp"/>
-
+                android:text="@string/saveCert"/>
+        <Button android:id="@+id/information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/information"/>
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,14 +47,14 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="捐赠" tools:ignore="ButtonStyle">
+                    android:text="@string/donate" tools:ignore="ButtonStyle">
             </Button>
         </LinearLayout>
 
         <Button android:id="@+id/setting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="设置"/>
+                android:text="@string/title_activity_settings"/>
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -72,19 +66,19 @@
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="启动" tools:ignore="ButtonStyle">
+                    android:text="@string/start" tools:ignore="ButtonStyle">
             </Button>
             <Button
                     android:id="@+id/clear"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="清除日志" tools:ignore="ButtonStyle">
+                    android:text="@string/clearLog" tools:ignore="ButtonStyle">
             </Button>
         </LinearLayout>
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="日志:"
+                  android:text="@string/log"
                   android:textSize="24dp"/>
 
         <HorizontalScrollView
