--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -54,6 +54,7 @@
             <EditText android:id="@+id/port"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
+                      android:inputType="number"
                       android:text="25560"/>
         </LinearLayout>
         <Button
