--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -6,7 +6,7 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical" tools:ignore="UselessParent">
-        <LinearLayout android:layout_width="match_parent"
+        <LinearLayout android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
             <CheckBox
@@ -19,6 +19,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="@string/outRequestURL"/>
+            <CheckBox
+                    android:id="@+id/openCheckUpdate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/check_for_updates_when_opening_the_program"/>
         </LinearLayout>
 
 
